# Memzent.AI

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_INTENT_CANONICALIZATION.md  Excutive_summary_stratagy_proposal.md  GO_LIVE_CHECKLIST.md  INSTRUCTIONS.md  LICENSE  Makefile  OPEN_SOURCE_COMPONENTS.md  PROJECT_STATUS.md  README.md  SELF_HOSTING.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  notes.md
.github/: copilot-instructions.md
docs/: architecture-diagram.md  cache-invalidation.md  logo-concepts.md
migrations/: 001_create_tools_registry.sql  003_universal_tool_metadata.sql  004_org_rbac.sql  005_api_keys.sql  006_secure_audit_and_keys.sql  007_core_rls_policies.sql  008_user_scoped_keys.sql  009_fix_rbac_recursion.sql  010_infrastructure_hardening.sql  011_tool_registry_sync.sql  012_provision_org_rpc.sql  013_billing_balances.sql  014_api_key_scopes.sql  015_persistent_cache.sql  016_welcome_token_balance.sql  017_agent_memory_and_analytics.sql  018_increase_billing_precision.sql  019_org_default_providers.sql  020_api_key_rotation.sql  021_provision_chat_execute.sql  021_seed_memory_tools.sql  022_similarity_threshold.sql  023_webhook_notifications.sql  024_spend_limits.sql  025_blog_posts.sql  026_workflow_registry.sql  027_remove_welcome_balance.sql  028_blog_image_storage.sql  20260407_saas.sql  20260410_auth_provisioning.sql
proto/: router.proto
scripts/: observability-checklist.md  verify-supabase-migrations.sql
services/router/: Cargo.toml  Dockerfile  Dockerfile.prod  build.rs
services/router/src/: collections.rs  embedding.rs  handlers.rs  lib.rs  main.rs
services/router/tests/: integration_tests.rs  unit_tests.rs
website/: .env  Dockerfile  Dockerfile.prod  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  wrangler.toml
(+240 files in other folders)
