[package]
name = "aura-router"
version = "0.1.0"
edition = "2021" # Change 2024 back to 2021

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# gRPC framework
tonic = "0.11"
prost = "0.12"
# Vector DB Client
qdrant-client = "1.10"
# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.11"